--- a/config.yml
+++ b/config.yml
@@ -1,12 +1,54 @@
-lr: 3e-4
+lr: 1e-3
 data_dir: data
-chkpt_dir: models
+chkpt_dir: models/celeba/
 checkpoints: 1
-num_samples: 8
-image_size: 90
+num_samples: 64
+image_size: 64
 latent_dim: 50
-train_batch_size: 4
+train_batch_size: 16
 test_batch_size: 4
-epochs: 100
+epochs: 20
 beta: 1
+labels:
+  5_o_Clock_Shadow: 0
+  Arched_Eyebrows: 1
+  Attractive: 2
+  Bags_Under_Eyes: 3
+  Bald: 4
+  Bangs: 5
+  Big_Lips: 6
+  Big_Nose: 7
+  Black_Hair: 8
+  Blond_Hair: 9
+  Blurry: 10
+  Brown_Hair: 11
+  Bushy_Eyebrows: 12
+  Chubby: 13
+  Double_Chin: 14
+  Eyeglasses: 15
+  Goatee: 16
+  Gray_Hair: 17
+  Heavy_Makeup: 18
+  High_Cheekbones: 19
+  Male: 20
+  Mouth_Slightly_Open: 21
+  Mustache: 22
+  Narrow_Eyes: 23
+  No_Beard: 24
+  Oval_Face: 25
+  Pale_Skin: 26
+  Pointy_Nose: 27
+  Receding_Hairline: 28
+  Rosy_Cheeks: 29
+  Sideburns: 30
+  Smiling: 31
+  Straight_Hair: 32
+  Wavy_Hair: 33
+  Wearing_Earrings: 34
+  Wearing_Hat: 35
+  Wearing_Lipstick: 36
+  Wearing_Necklace: 37
+  Wearing_Necktie: 38
+  Young: 39
+
 
